--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ services:
   web:
     image: gitlab/gitlab-ce:latest
     restart: always
-    hostname: 'gitlab.zods.com'
+    hostname: 'gitlab.devopstp.com'
     environment:
       GITLAB_OMNIBUS_CONFIG: |
-        external_url 'https://gitlab.zods.com'
+        external_url 'https://gitlab.devopstp.com'
     ports:
       - '80:80'
       - '443:443'
